2003-05-26  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* libnautilus/Makefile.am: link dependent libraries.

	Patch reviewed by:  Alexander Larsson  <alexl@redhat.com>

2003-05-20  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c (popup_menu_callback): Return
	TRUE.

2003-05-16  Padraig O'Briain  <padraig.obriain@sun.com>

        * src/file-manager/fm-list-view.c:
        Use the signal "popup_menu" to handle Shift+F10 instead of doing
        it in "key_press_event" signal handler. This fixes bug #103348.

2003-05-16  Padraig O'Briain  <padraig.obriain@sun.com>

	* libnautilus-private/nautilus-program-chooser.c:
	(nautilus_program_chooser_instance_init): Add calls to 
	gtk_label_set_mnemonic_widget so that ATK relation label-for and
	labelled-by will exist when accessibiity is enabled.
	This fixes bug #79059.

=== nautilus 2.2.4 ===

2003-05-07  Dave Camp  <dave@ximian.com>

	* configure.in:
	* NEWS:
	Bumped version to 2.2.4.

2003-05-05  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS

2003-05-03  Dave Camp  <dave@ximian.com>

	* components/hardware/nautilus-hardware-view.c:
	(nautilus_hardware_view_drag_data_received): Updated to (sort of) 
	new EelBackground api.

2003-04-30  Dave Camp  <dave@ximian.com>

	Merged bugfixes from HEAD.

2003-04-23 Dave Camp <dave@ximian.com>

	* src/file-manager/fm-properties-window.c: (create_emblems_page):
	Modify emblems on the original_file, not the target_file.

2003-04-23 Alexander Larsson <alexl@redhat.com>
	* src/file-manager/fm-list-view.c (key_press_callback):
	* libnautilus-private/nautilus-icon-container.c (key_press_event):
	* docs/key_mouse_navigation.txt (Keyboard):
	Bring up context menu is Ctrl-F10, not Shift-F9
	
2003-04-23 Alexander Larsson <alexl@redhat.com>
	* src/file-manager/fm-desktop-icon-view.c (volume_ops_callback):
	Check for file: instead of is_local when verifying a volume desktop file
	is ok. Fixes bug #98306.
