@@ -1,3 +1,8 @@
+2003-05-27  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
+
+	* src/file-manager/fm-list-view.c: Fixes spacebar keynav
+	issue. Bugzilla bug #102259
+
 2003-05-26  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
 
 	* libnautilus/Makefile.am: link dependent libraries.
